--- a/CaseStudy/furama/prototype/bootstrap-footer-14/index.html
+++ b/CaseStudy/furama/prototype/bootstrap-footer-14/index.html
@@ -9,8 +9,7 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
-      crossorigin="anonymous"
-    />
+      crossorigin="anonymous"/>
     <link
       href="https://fonts.googleapis.com/css?family=Nunito+Sans:300,400,600,700&display=swap"
       rel="stylesheet"
