--- a/CaseStudy/furama/prototype/bootstrap-footer-14/facility.html
+++ b/CaseStudy/furama/prototype/bootstrap-footer-14/facility.html
@@ -193,7 +193,26 @@
       </div>
     </div>
   </div>
-
+<!-- Phân trang -->
+<nav aria-label="Page navigation example" class="d-flex justify-content-center">
+  <ul class="pagination">
+    <li class="page-item">
+      <a class="page-link" href="#" aria-label="Previous">
+        <span aria-hidden="true">&laquo;</span>
+        <span class="sr-only">Previous</span>
+      </a>
+    </li>
+    <li class="page-item"><a class="page-link" href="#">1</a></li>
+    <li class="page-item"><a class="page-link" href="#">2</a></li>
+    <li class="page-item"><a class="page-link" href="#">3</a></li>
+    <li class="page-item">
+      <a class="page-link" href="#" aria-label="Next">
+        <span aria-hidden="true">&raquo;</span>
+        <span class="sr-only">Next</span>
+      </a>
+    </li>
+  </ul>
+</nav>
 
 <!-- Footer -->
     <footer class="footer-04" style="background-color: #085f56">
