--- a/CaseStudy/furama/prototype/bootstrap-footer-14/facility.html
+++ b/CaseStudy/furama/prototype/bootstrap-footer-14/facility.html
@@ -76,7 +76,9 @@
           <p class="card-text p-0">Room size: 85.8 m2</p>
         </div>
         <div class="card-body p-2">
-          <a href="#" class="btn btn-danger">Delete</a>
+          <button type="button" class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#exampleModal">
+            Delete
+          </button>
           <a href="#" class="btn btn-primary">Update</a>
         </div>
       </div>
@@ -89,7 +91,9 @@
           <p class="card-text p-0">Room size: 85.8 m2</p>
         </div>
         <div class="card-body p-2">
-          <a href="#" class="btn btn-danger">Delete</a>
+          <button type="button" class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#exampleModal">
+            Delete
+          </button>
           <a href="#" class="btn btn-primary">Update</a>
         </div>
       </div>
@@ -102,7 +106,9 @@
           <p class="card-text p-0">Room size: 85.8 m2</p>
         </div>
         <div class="card-body p-2">
-          <a href="#" class="btn btn-danger">Delete</a>
+          <button type="button" class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#exampleModal">
+            Delete
+          </button>
           <a href="#" class="btn btn-primary">Update</a>
         </div>
       </div>
@@ -118,7 +124,9 @@
           <p class="card-text p-0">Room size: 85.8 m2</p>
         </div>
         <div class="card-body p-2">
-          <a href="#" class="btn btn-danger">Delete</a>
+          <button type="button" class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#exampleModal">
+            Delete
+          </button>
           <a href="#" class="btn btn-primary">Update</a>
         </div>
       </div>
@@ -131,7 +139,9 @@
           <p class="card-text p-0">Room size: 85.8 m2</p>
         </div>
         <div class="card-body p-2">
-          <a href="#" class="btn btn-danger">Delete</a>
+          <button type="button" class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#exampleModal">
+            Delete
+          </button>
           <a href="#" class="btn btn-primary">Update</a>
         </div>
       </div>
@@ -144,7 +154,9 @@
           <p class="card-text p-0">Room size: 85.8 m2</p>
         </div>
         <div class="card-body p-2">
-          <a href="#" class="btn btn-danger">Delete</a>
+          <button type="button" class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#exampleModal">
+            Delete
+          </button>
           <a href="#" class="btn btn-primary">Update</a>
         </div>
       </div>
@@ -161,7 +173,9 @@
           <p class="card-text p-0">Room size: 85.8 m2</p>
         </div>
         <div class="card-body p-2">
-          <a href="#" class="btn btn-danger">Delete</a>
+          <button type="button" class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#exampleModal">
+            Delete
+          </button>
           <a href="#" class="btn btn-primary">Update</a>
         </div>
       </div>
@@ -174,7 +188,9 @@
           <p class="card-text p-0">Room size: 85.8 m2</p>
         </div>
         <div class="card-body p-2">
-          <a href="#" class="btn btn-danger">Delete</a>
+          <button type="button" class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#exampleModal">
+            Delete
+          </button>
           <a href="#" class="btn btn-primary">Update</a>
         </div>
       </div>
@@ -187,7 +203,9 @@
           <p class="card-text p-0">Room size: 85.8 m2</p>
         </div>
         <div class="card-body p-2">
-          <a href="#" class="btn btn-danger">Delete</a>
+          <button type="button" class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#exampleModal">
+            Delete
+          </button>
           <a href="#" class="btn btn-primary">Update</a>
         </div>
       </div>
@@ -213,6 +231,26 @@
     </li>
   </ul>
 </nav>
+
+<!-- Modal -->
+<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        ...
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary">Save changes</button>
+      </div>
+    </div>
+  </div>
+</div>
+
 
 <!-- Footer -->
     <footer class="footer-04" style="background-color: #085f56">
