--- a/CaseStudy/furama/prototype/bootstrap-footer-14/createCustomer.html
+++ b/CaseStudy/furama/prototype/bootstrap-footer-14/createCustomer.html
@@ -56,121 +56,87 @@
       </div>
     </nav>
 
-    <div style="margin-top: 75px;">
-        <table class="table table-striped">
-            <thead>
-              <tr>
-                <th scope="col">ID</th>
-                <th scope="col">Name</th>
-                <th scope="col">Date of birth</th>
-                <th scope="col">Gender</th>
-                <th scope="col">Identity</th>
-                <th scope="col">Phone</th>
-                <th scope="col">Email</th>
-                <th scope="col">Address</th>
-                <th scope="col">Customer type</th>
-                <th scope="col"></th>
-                <th scope="col"></th>
-              </tr>
-            </thead>
-            <tbody>
-              <tr>
-                <th scope="row">1</th>
-                <td>Hà Nguyễn Thanh Phong</td>
-                <td>08/06/1997</td>
-                <td>Made</td>
-                <td>201763234</td>
-                <td>079243338</td>
-                <td>thanhphong861997@gmail.com</td>
-                <td>26 Tú Mỡ</td>
-                <td>Gold</td>
-                <td>
-                    <a href="" class=" btn btn-primary">Update</a>
-                </td>
-                <td>
-                    <button type="button" class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#exampleModal">
-                        Delete
-                      </button>
-                </td>
-              </tr>
-              <tr>
-                <th scope="row">2</th>
-                <td>Hà Nguyễn Thanh Phong</td>
-                <td>08/06/1997</td>
-                <td>Made</td>
-                <td>201763234</td>
-                <td>079243338</td>
-                <td>thanhphong861997@gmail.com</td>
-                <td>26 Tú Mỡ</td>
-                <td>Gold</td>
-                <td>
-                    <a href="" class=" btn btn-primary">Update</a>
-                </td>
-                <td>
-                    <button type="button" class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#exampleModal">
-                        Delete
-                      </button>
-                </td>
-              </tr>
-              <tr>
-                <th scope="row">3</th>
-                <td>Hà Nguyễn Thanh Phong</td>
-                <td>08/06/1997</td>
-                <td>Made</td>
-                <td>201763234</td>
-                <td>079243338</td>
-                <td>thanhphong861997@gmail.com</td>
-                <td>26 Tú Mỡ</td>
-                <td>Gold</td>
-                <td>
-                    <a href="" class=" btn btn-primary">Update</a>
-                </td>
-                <td>
-                    <button type="button" class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#exampleModal">
-                        Delete
-                      </button>
-                </td>
-              </tr>
-              <tr>
-                <th scope="row">4</th>
-                <td>Hà Nguyễn Thanh Phong</td>
-                <td>08/06/1997</td>
-                <td>Made</td>
-                <td>201763234</td>
-                <td>079243338</td>
-                <td>thanhphong861997@gmail.com</td>
-                <td>26 Tú Mỡ</td>
-                <td>Gold</td>
-                <td>
-                    <a href="" class=" btn btn-primary">Update</a>
-                </td>
-                <td>
-                    <button type="button" class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#exampleModal">
-                        Delete
-                      </button>
-                </td>
-              </tr>
-            </tbody>
-          </table>
+    <div class="d-flex justify-content-center mb-4" style="margin-top: 85px;">
+        <form style="width: 50%;">
+            <div>
+              <legend>Create Customer</legend>
+              <div class="row mb-4">
+                <div class="col-3 d-flex align-items-center">
+                    <label for="disabledTextInput" class="form-label">Name</label>
+                </div>
+                <div class="col-8">
+                    <input type="text" id="disabledTextInput" class="form-control" placeholder="Enter name of customer">
+                </div>
+              </div>
+              <div class="row mb-4">
+                <div class="col-3 d-flex align-items-center">
+                    <label for="disabledTextInput" class="form-label">Date of birth</label>
+                </div>
+                <div class="col-8">
+                    <input type="text" id="disabledTextInput" class="form-control" placeholder="Enter date of birth">
+                </div>
+              </div>
+              <div class="row mb-4">
+                <div class="col-3 d-flex align-items-center">
+                    <label for="disabledTextInput" class="form-label">Gender</label>
+                </div>
+                <div class="col-8">
+                    <input type="text" id="disabledTextInput" class="form-control" placeholder="Enter gender of customer">
+                </div>
+              </div>
+              <div class="row mb-4">
+                <div class="col-3 d-flex align-items-center">
+                    <label for="disabledTextInput" class="form-label">Identity</label>
+                </div>
+                <div class="col-8">
+                    <input type="text" id="disabledTextInput" class="form-control" placeholder="Enter identity of customer">
+                </div>
+              </div>
+              <div class="row mb-4">
+                <div class="col-3 d-flex align-items-center">
+                    <label for="disabledTextInput" class="form-label">Phone</label>
+                </div>
+                <div class="col-8">
+                    <input type="text" id="disabledTextInput" class="form-control" placeholder="Enter phone of customer">
+                </div>
+              </div>
+              <div class="row mb-4">
+                <div class="col-3 d-flex align-items-center">
+                    <label for="disabledTextInput" class="form-label">Email</label>
+                </div>
+                <div class="col-8">
+                    <input type="text" id="disabledTextInput" class="form-control" placeholder="Enter email of customer">
+                </div>
+              </div>
+              <div class="row mb-4">
+                <div class="col-3 d-flex align-items-center">
+                    <label for="disabledTextInput" class="form-label">Address</label>
+                </div>
+                <div class="col-8">
+                    <input type="text" id="disabledTextInput" class="form-control" placeholder="Enter address of customer">
+                </div>
+              </div>
+              <div class="row mb-4">
+                <div class="col-3 d-flex align-items-center">
+                    <label for="disabledSelect" class="form-label">Customer type</label>
+                </div>
+                <div class="col-8">
+                    <select id="disabledSelect" class="form-select">
+                        <option>Diamond</option>
+                        <option>Platinium</option>
+                        <option>Gold</option>
+                        <option>Silver</option>
+                        <option>Member</option>
+                    </select>
+                </div>
+              </div>
+              <div class="d-flex justify-content-center">
+                <a href="" class="btn btn-secondary me-3">Back</a>
+                <button type="submit" class="btn btn-primary">Create</button>
+              </div>
+            </div>
+          </form>
     </div>
-    <!-- Modal -->
-<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-    <div class="modal-dialog">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
-          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-        </div>
-        <div class="modal-body">
-          ...
-        </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-          <button type="button" class="btn btn-primary">Save changes</button>
-        </div>
-      </div>
-    </div>
-  </div>
 
 <!-- Footer -->
     <footer class="footer-04" style="background-color: #085f56">
