--- a/CaseStudy/furama/prototype/bootstrap-footer-14/createContract.html
+++ b/CaseStudy/furama/prototype/bootstrap-footer-14/createContract.html
@@ -58,11 +58,11 @@
 
     <div class="d-flex justify-content-center mb-4" style="margin-top: 60px;">
         <form style="width: 50%;">
-            <h1 class="text-center mt-5">New Contact</h1>
+            <h1 class="text-center mt-5">New Contract</h1>
             <h5>Customer information make a contract</h5>
             <div>
               <div class="row mb-4">
-                <div class="col-3 d-flex align-items-center">
+                <div class="col-4 d-flex align-items-center">
                     <label for="disabledTextInput" class="form-label">Name</label>
                 </div>
                 <div class="col-8">
@@ -70,7 +70,7 @@
                 </div>
               </div>
               <div class="row mb-4">
-                <div class="col-3 d-flex align-items-center">
+                <div class="col-4 d-flex align-items-center">
                     <label for="disabledTextInput" class="form-label">Date of birth</label>
                 </div>
                 <div class="col-8">
@@ -78,7 +78,7 @@
                 </div>
               </div>
               <div class="row mb-4">
-                <div class="col-3 d-flex align-items-center">
+                <div class="col-4 d-flex align-items-center">
                     <label for="disabledTextInput" class="form-label">Gender</label>
                 </div>
                 <div class="col-8">
@@ -86,7 +86,7 @@
                 </div>
               </div>
               <div class="row mb-4">
-                <div class="col-3 d-flex align-items-center">
+                <div class="col-4 d-flex align-items-center">
                     <label for="disabledTextInput" class="form-label">Identity</label>
                 </div>
                 <div class="col-8">
@@ -94,7 +94,7 @@
                 </div>
               </div>
               <div class="row mb-4">
-                <div class="col-3 d-flex align-items-center">
+                <div class="col-4 d-flex align-items-center">
                     <label for="disabledTextInput" class="form-label">Phone</label>
                 </div>
                 <div class="col-8">
@@ -102,7 +102,7 @@
                 </div>
               </div>
               <div class="row mb-4">
-                <div class="col-3 d-flex align-items-center">
+                <div class="col-4 d-flex align-items-center">
                     <label for="disabledTextInput" class="form-label">Email</label>
                 </div>
                 <div class="col-8">
@@ -110,7 +110,7 @@
                 </div>
               </div>
               <div class="row mb-4">
-                <div class="col-3 d-flex align-items-center">
+                <div class="col-4 d-flex align-items-center">
                     <label for="disabledTextInput" class="form-label">Address</label>
                 </div>
                 <div class="col-8">
@@ -118,7 +118,7 @@
                 </div>
               </div>
               <div class="row mb-4">
-                <div class="col-3 d-flex align-items-center">
+                <div class="col-4 d-flex align-items-center">
                     <label for="disabledSelect" class="form-label">Customer type</label>
                 </div>
                 <div class="col-8">
@@ -133,7 +133,7 @@
               </div>
               <h5>Room information</h5>
               <div class="row mb-4">
-                <div class="col-3 d-flex align-items-center">
+                <div class="col-4 d-flex align-items-center">
                     <label for="disabledTextInput" class="form-label">Room name</label>
                 </div>
                 <div class="col-8">
@@ -141,7 +141,7 @@
                 </div>
               </div>
               <div class="row mb-4">
-                <div class="col-3 d-flex align-items-center">
+                <div class="col-4 d-flex align-items-center">
                     <label for="disabledTextInput" class="form-label">Room size</label>
                 </div>
                 <div class="col-8">
@@ -149,7 +149,7 @@
                 </div>
               </div>
               <div class="row mb-4">
-                <div class="col-3 d-flex align-items-center">
+                <div class="col-4 d-flex align-items-center">
                     <label for="disabledTextInput" class="form-label">Room image</label>
                 </div>
                 <div class="col-8">
@@ -157,7 +157,7 @@
                 </div>
               </div>
               <div class="row mb-4">
-                <div class="col-3 d-flex align-items-center">
+                <div class="col-4 d-flex align-items-center">
                     <label for="disabledTextInput" class="form-label">Room price</label>
                 </div>
                 <div class="col-8">
@@ -165,7 +165,7 @@
                 </div>
               </div>
               <div class="row mb-4">
-                <div class="col-3 d-flex align-items-center">
+                <div class="col-4 d-flex align-items-center">
                     <label for="disabledSelect" class="form-label">Room type</label>
                 </div>
                 <div class="col-8">
@@ -178,7 +178,7 @@
               </div>
               <h5>Contract information</h5>
               <div class="row mb-4">
-                <div class="col-3 d-flex align-items-center">
+                <div class="col-4 d-flex align-items-center">
                     <label for="disabledTextInput" class="form-label">Contract code</label>
                 </div>
                 <div class="col-8">
@@ -186,7 +186,7 @@
                 </div>
               </div>
               <div class="row mb-4">
-                <div class="col-3 d-flex align-items-center">
+                <div class="col-4 d-flex align-items-center">
                     <label for="disabledTextInput" class="form-label">Start date</label>
                 </div>
                 <div class="col-8">
@@ -194,7 +194,7 @@
                 </div>
               </div>
               <div class="row mb-4">
-                <div class="col-3 d-flex align-items-center">
+                <div class="col-4 d-flex align-items-center">
                     <label for="disabledTextInput" class="form-label">Completion date</label>
                 </div>
                 <div class="col-8">
@@ -202,7 +202,7 @@
                 </div>
               </div>
               <div class="row mb-4">
-                <div class="col-3 d-flex align-items-center">
+                <div class="col-4 d-flex align-items-center">
                     <label for="disabledTextInput" class="form-label">Advance payment</label>
                 </div>
                 <div class="col-8">
@@ -210,7 +210,7 @@
                 </div>
               </div>
               <div class="row mb-4">
-                <div class="col-3 d-flex align-items-center">
+                <div class="col-4 d-flex align-items-center">
                     <label for="disabledTextInput" class="form-label">Total remaining payment</label>
                 </div>
                 <div class="col-8">
