--- a/CaseStudy/furama/prototype/bootstrap-footer-14/index.html
+++ b/CaseStudy/furama/prototype/bootstrap-footer-14/index.html
@@ -72,6 +72,7 @@
     </div>
   </div>
     </header>
+    <!-- FOOTER -->
     <footer class="footer-04" style="background-color: #085f56">
       <div class="container">
         <div class="row">
